<resources>
    <string name="app_name" translatable="false">Mutify</string>
    <string name="action_settings">Settings</string>
    <string name="open_spotify">Open Spotify</string>
    <string name="mute_ads">Mute Ads</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="titleText">Tips</string>
    <string name="toggle_tips">Hide Tips</string>
    <string name="warningText">-> Allow Mutify to run in background and disable any battery restriction features for Mutify to work properly.</string>
    <string name="warningText0">-> If you encounter any delay in muting/unmuting try disabling cross-fade between songs from Spotify settings.</string>
    <string name="warningText1">-> Ads playing after you manually skip a track cannot be muted. You can manually press mute/unmute in that case.</string>
    <string name="warningText2">-> Please Contact Us, if you face any other issues.</string>
    <string name="warning_toast_message">Please consider leaving a review on the Play Store if you want to support this app ;) </string>
    <string name="next">next</string>
    <string name="pause">pause</string>
    <string name="play">play</string>
    <string name="previous">previous</string>
    <string name="enable_dark_mode">Dark-Only Mode</string>
    <string name="rate_app_in_play_store">Rate App in Play Store</string>
    <string name="play_state_text">Currently Playing</string>
    <string name="last_detected_song">Last Detected Song</string>
    <string name="mute_timer_cancelled">Mute timer cancelled</string>
    <string name="device_muted">Device was Muted</string>
    <string name="dialog_title">Enable Device Broadcast Status</string>
    <string name="dialog_message">Please enable \n\'Device Broadcast Status\'\n in Spotify settings for Mutify to work. \nMutify won\'t work without it.</string>
    <string name="dialog_positive_btn">Open Spotify</string>
    <string name="dialog_negative_btn">I have enabled it</string>
    <string name="contact_us">Contact Us</string>
    <string name="auto_launch_spotify">Auto-launch Spotify</string>
    <string name="music_image">Music Image</string>
</resources>